<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/golden"
    tools:context=".multi_play_hall_Activity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mulphall_tb"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        android:background="@color/golden">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/multiplayer_mode"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:theme="@style/Theme.Bobing.TitleText" />

    </androidx.appcompat.widget.Toolbar>


    <TextView
        android:id="@+id/mulp_hall_current_display_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="180dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="Player A"
        />

    <TextView
        android:id="@+id/mulp_hall_resShowH_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/all_results"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_below="@id/mulp_hall_current_display_tv"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:id="@+id/mulp_hall_resShow_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_below="@id/mulp_hall_resShowH_tv"
        android:text="hello_"
        android:paddingHorizontal="60dp"
        android:layout_marginTop="30dp"
        />

    <Button
        android:id="@+id/mulp_hnext_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="180dp"
        android:backgroundTint="@color/btn_twhite1"
        android:outlineSpotShadowColor="@color/white"
        android:textColor="@color/white"
        android:padding="30dp"
        android:text="@string/play_a_round"
        android:theme="@style/Theme.Bobing.TitleText" />

</RelativeLayout>