<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".aboutPageActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/abp_tb"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        android:background="@color/golden">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/about_program"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:theme="@style/Theme.Bobing.TitleText" />

    </androidx.appcompat.widget.Toolbar>

<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center"-->
<!--        android:textAlignment="center"-->
<!--        android:text="@string/about_program"-->
<!--        android:textColor="@color/black"-->
<!--        android:theme="@style/Theme.Bobing.TitleText"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp"
            />

        <ImageView
            android:id="@+id/abp_iv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/a6"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:padding="15dp"
            android:textColor="@color/black"
            android:background="@color/btn_twhite2"
            android:autoSizeTextType="uniform"
            android:text="@string/brief_introduction"
            />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_gravity="center"
                android:id="@+id/abp_actv1"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:padding="15dp"
                android:text="@string/brief_words"
                android:autoLink="all"
                android:autoSizeTextType="uniform"
                />

        </FrameLayout>






    </LinearLayout>

</LinearLayout>